Fixing some more spacing

--- a/client/src/scss/media_queries.scss
+++ b/client/src/scss/media_queries.scss
@@ -556,9 +556,9 @@
     display: none !important;
   }
 
-  .content {
-    padding: 10px;
-  }
+  // .content {
+  //   padding: 10px;
+  // }
   .shipping_rates {
     font-size: 14px;
   }
